K8s/ingress/ingress-resources.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ip-app-ingress-root
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ingress.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cip-ipapp
            port:
              number: 30002
      - path: /name
        pathType: Prefix
        backend:
          service:
            name: cip-ipapp
            port:
              number: 30002
